--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": [
+    "next",
     "next/core-web-vitals",
-    "next/babel",
     "prettier",
     "plugin:import/recommended",
     "plugin:import/warnings"
