--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-storybook": "^0.5.7",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
     "prettier": "2.5.1",
     "tailwindcss": "^3.0.8",
